# octo

./: CMakeLists.txt  I2C.hpp  LinuxI2C.hpp  MPL3115A2.hpp  README.md  main.cpp
cmake/: FindI2CTools.cmake
include/octo/: I2C.hpp  LinuxI2C.hpp  MPL3115A2.hpp
src/: CMakeLists.txt  I2C.cpp  LinuxI2C.cpp  MPL3115A2.cpp  main.cpp
